--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 # Exclude Makefiles, CMake and Lisp from stats
-Makefile linguist-vendored
+Makefile linguist-ignore
 *.cmake linguist-vendored
 *.lisp linguist-vendored
 *.cl linguist-vendored
